--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
 			<ul>
 				<li><a href="top.php">Home</a></li>
 				<li><a href="company.php">Company</a></li>
-				<li><a href="tab3.html">Recruit</a></li>
+				<li><a href="tab.html">Recruit</a></li>
 				<!--	↓今回は使わない予定 -->
 				<!-- <li><a href="news.html">ニュース</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
@@ -31,14 +31,14 @@
 <!-- <div class="emp_box"></div> -->
 <div id="header-sm">
 	<!-- <div class="mini_box"> -->
-	<a href="index.html"><img src="image/altair_logo6.png" alt="ロゴマーク" class="logo"></a><!-- </div> -->
+	<a href="top.php"><img src="image/altair_logo6.png" alt="ロゴマーク" class="logo"></a><!-- </div> -->
 
 	<div class="overlay-navigation">
 		<nav role="navigation">
 			<ul>
 				<li><a href="top.php" data-content="ホーム画面です">Home</a></li>
 				<li><a href="company.php" data-content="会社の情報を確認できます">Company</a></li>
-				<li><a href="tab3.html" data-content="採用情報を確認できます">Recruit</a></li>
+				<li><a href="tab.html" data-content="採用情報を確認できます">Recruit</a></li>
 				<!-- <li><a href="news.html" data-content="ニュースを表示します">News</a></li> -->
 				<li><a href="contact.html" data-content="ご連絡のある方はこちら">Contact</a></li>
 				<li><a href="privacy.html" data-content="個人情報保護方針">Privacy</a></li>
@@ -115,7 +115,7 @@
 			<ul>
 				<li><a href="top.php">Home</a></li>
 				<li><a href="company.php">Company</a></li>
-				<li><a href="tab3.html">Recruit</a></li>
+				<li><a href="tab.html">Recruit</a></li>
 				<!-- 今回は使わない -->
 				<!-- <li><a href="news.html">ニュース</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
