--- a/works.html
+++ b/works.html
@@ -31,7 +31,7 @@
 			<ul>
 				<li><a href="top.php">Home</a></li>
 				<li><a href="company.php">Company</a></li>
-				<li><a href="tab3.html">Recruit</a></li>
+				<li><a href="tab.html">Recruit</a></li>
 				<!--	↓今回は使わない予定 -->
 				<!-- <li><a href="news.html">ニュース</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
@@ -40,17 +40,15 @@
 		</div>
 	</div>
 </header>
-<!-- <div class="emp_box"></div> -->
 <div id="header-sm">
-	<!-- <div class="mini_box"> -->
-	<a href="index.html"><img src="image/altair_logo6.png" alt="ロゴマーク" class="logo"></a><!-- </div> -->
+	<a href="top.php"><img src="image/altair_logo6.png" alt="ロゴマーク" class="logo"></a>
 
 	<div class="overlay-navigation">
 		<nav role="navigation">
 			<ul>
 				<li><a href="top.php" data-content="ホーム画面です">Home</a></li>
 				<li><a href="company.php" data-content="会社の情報を確認できます">Company</a></li>
-				<li><a href="tab3.html" data-content="採用情報を確認できます">Recruit</a></li>
+				<li><a href="tab.html" data-content="採用情報を確認できます">Recruit</a></li>
 				<!-- <li><a href="news.html" data-content="ニュースを表示します">News</a></li> -->
 				<li><a href="contact.html" data-content="ご連絡のある方はこちら">Contact</a></li>
 				<li><a href="privacy.html" data-content="個人情報保護方針">Privacy</a></li>
@@ -60,7 +58,7 @@
 
 	<section class="home">
 		<div class="open-overlay">
-			<div class="maru"> 
+			<div class="maru">
 				<span class="bar-top"></span>
 				<span class="bar-middle"></span>
 				<span class="bar-bottom"></span>
@@ -69,6 +67,12 @@
 	</section>
 	<span class="menuMoji">menu</span>
 </div>
+ <div class="pankuzu">
+      <ul>
+        <li><a href="top.php">ホーム</a></li>
+        <li><a href="#">プライバシー</a></li>
+      </ul>
+    </div>
 		<div id="container">
 			<div id="main">
 				<div style="text-align: center; padding-bottom: 20px;" id="workstitle">
@@ -157,7 +161,7 @@
 			<ul>
 				<li><a href="top.php">Home</a></li>
 				<li><a href="company.php">Company</a></li>
-				<li><a href="tab3.html">Recruit</a></li>
+				<li><a href="tab.html">Recruit</a></li>
 				<!-- 今回は使わない -->
 				<!-- <li><a href="news.html">ニュース</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
