--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/ncmb.min.js"></script>
 	<script type="text/javascript" src="js/topNews.js"></script>
+	<script type="text/javascript" src="js/header.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="file/bootstrap.css">
@@ -67,6 +68,7 @@
 	</section>
 	<span class="menuMoji">menu</span>
 </div>
+<div class="clear_box"></div>
  <div class="pankuzu">
       <ul>
         <li><a href="top.php">ホーム</a></li>
