--- a/works.html
+++ b/works.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 	<head>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" charset="UTF-8">
+	  	<script src="https://code.jquery.com/		jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="js/header.js"></script>
 		<link rel="stylesheet" href="works.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="bootstrap.css">
@@ -65,8 +67,8 @@
 			</div>
 		</div>
 	</section>
-	<span class="menuMoji">menu</span>
 </div>
+<div class="clear_box"></div>
  <div class="pankuzu">
       <ul>
         <li><a href="top.php">ホーム</a></li>
