--- a/tab.html
+++ b/tab.html
@@ -5,6 +5,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<!-- <link rel="stylesheet" type="text/css" href="css/recruit.css"> -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+	<script type="text/javascript" src="js/header.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
 	<!-- <link rel="stylesheet" type="text/css" href="file/bootstrap.css"> -->
 	<!-- <script type="text/javascript" src="file/bootstrap.js"></script> -->
@@ -62,8 +63,8 @@
 			</div>
 		</div>
 	</section>
-	<span class="menuMoji">menu</span>
 </div>
+<div class="clear_box"></div>
 <div class="pankuzu">
 			<ul>
 				<li><a class="no-color-change" href="top.php">ホーム</a></li>
